--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db-migrate-dev": "yarn prisma migrate dev",
     "db-nuke": "docker-compose down --volumes --remove-orphans",
     "dev": "next dev",
-    "dx": "run-s db-up db-migrate-dev db-seed dev",
+    "dx": "run-s db-migrate-dev db-seed dev",
     "start": "next start",
     "lint": "eslint src",
     "lint-fix": "yarn lint --fix",
@@ -32,14 +32,16 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@prisma/client": "^3.0.1",
+    "@prisma/client": "^4.1.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "bootstrap": "^5.2.0",
     "clsx": "^1.1.1",
     "next": "^12.1.6",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-query": "^3.39.2",
     "start-server-and-test": "^1.12.0",
@@ -63,7 +65,7 @@
     "npm-run-all": "^4.1.5",
     "playwright": "^1.19.1",
     "prettier": "^2.5.1",
-    "prisma": "^3.7.0",
+    "prisma": "^4.1.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.3.0",
     "typescript": "4.4.4"
