--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test-dev": "start-server-and-test dev 3000 test",
     "test-start": "start-server-and-test start 3000 test",
     "test": "run-s test:*",
-    "test:unit": "jest",
+    "test:unit": "dotenv -e .env.test yarn db-migrate-dev && dotenv -e .env.test jest",
     "test:e2e": "playwright test",
     "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
     "postinstall": "prisma generate"
@@ -39,6 +39,8 @@
     "@trpc/server": "^9.26.2",
     "bootstrap": "^5.2.0",
     "clsx": "^1.1.1",
+    "dotenv-cli": "^6.0.0",
+    "moment": "^2.29.4",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
